update the component

--- a/src/components/DataGrid/DataGrid.css
+++ b/src/components/DataGrid/DataGrid.css
@@ -1,11 +1,4 @@
-table {
-  border: 1px solid lightgray;
-}
-
-tbody {
-  border-bottom: 1px solid lightgray;
-}
-
+/*
 th {
   border-bottom: 1px solid lightgray;
   border-right: 1px solid lightgray;
@@ -39,4 +32,31 @@ tfoot {
 
 tfoot th {
   font-weight: normal;
+}
+*/
+.resizer {
+  position: absolute;
+  right: 0;
+  top: 0;
+  height: 100%;
+  width: 5px;
+  background: rgba(0, 0, 0, 0.5);
+  cursor: col-resize;
+  user-select: none;
+  touch-action: none;
+}
+
+.resizer.isResizing {
+  background: blue;
+  opacity: 1;
+}
+
+@media (hover: hover) {
+  .resizer {
+    opacity: 0;
+  }
+
+  *:hover > .resizer {
+    opacity: 1;
+  }
 }
